# pico-swm-ex26a

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  counter.pio  main.c
